--- a/docs/css/book.css
+++ b/docs/css/book.css
@@ -73,9 +73,7 @@
 }
 
 /* changes to font-size for body text */
-.book .book-body .page-wrapper .page-inner section.normal p {
-  font-size: 150%;
-}
+.book .book-body .page-wrapper .page-inner section.normal p,
 .book .book-body .page-wrapper .page-inner section.normal ul li span, 
 .book .book-body .page-wrapper .page-inner section.normal ul li a {
   font-size: 150%;
