--- a/css/book.css
+++ b/css/book.css
@@ -76,17 +76,20 @@
 }
 
 /* changes to font-size for body text */
-.book .book-body .page-wrapper .page-inner section.normal p,
-.book .book-body .page-wrapper .page-inner section.normal ul li, 
-/*.book .book-body .page-wrapper .page-inner section.normal ul li span, */
-.book .book-body .page-wrapper .page-inner section.normal ul li a {
+.book .book-body .page-wrapper .page-inner section.normal p {
+  font-size: 150%;
+}
+
+book .book-body .page-wrapper .page-inner section.normal ul li, 
+book .book-body .page-wrapper .page-inner section.normal ul li span {
   font-size: 150%;
 }
 
 .book .book-body .page-wrapper .page-inner section.normal ol, 
 .book .book-body .page-wrapper .page-inner section.normal ul {
-    padding: 0 0 0 2em;
-    margin: 0 0 .85em;
+  font-size: 150%;
+  padding: 0 0 0 2em;
+  margin: 0 0 .85em;
 }
 
 .book .book-body {
