--- a/docs/css/book.css
+++ b/docs/css/book.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Roboto+Condensed|Lato|Lora|Fira+Sans");
+@import url("https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Roboto+Condensed|Open+Sans|Lato|Lora|Fira+Sans");
 
 /* title page */
 .book .book-body .page-wrapper .page-inner section.normal h1.title {
